fixed alignment for checked radios and the awesome theme; closes #1766

--- a/packages/webawesome/src/styles/themes/awesome.css
+++ b/packages/webawesome/src/styles/themes/awesome.css
@@ -440,7 +440,6 @@
 
       &:state(checked) {
         box-shadow: initial;
-        transform: translate(var(--wa-shadow-offset-x-s), var(--wa-shadow-offset-y-s));
       }
     }
 
